--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <section>
       <nav>
         <div class="title">Home</div>
-        <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
@@ -55,12 +55,12 @@
     <section>
       <h6>Navigation.</h6>
       <nav>
-        <div><a href="tma/index" class="title">Magnus Archives</a></div>
+        <div><a href="tma/" class="title">Magnus Archives</a></div>
         <div><a href="tma/characters" class="subtitle">Characters</a></div>
         <div><a href="tma/fears" class="subtitle">Dread Powers</a></div>
         <div><a href="tma/episodes" class="subtitle">Episodes</a></div>
           <hr>
-        <div><a href="tmagp/index" class="title">Magnus Protocol</a></div>
+        <div><a href="tmagp/" class="title">Magnus Protocol</a></div>
         <div><a href="tmagp/characters" class="subtitle">Characters</a></div>
         <div><a href="tmagp/episodes" class="subtitle">Episodes</a></div>
       </nav>
@@ -80,8 +80,8 @@
         <section>
           <nav>
               <div class="title">Home</div>
-              <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
@@ -97,12 +97,12 @@
         <section>
           <h6>Navigation.</h6>
           <nav>
-            <div><a href="tma/index" class="title">Magnus Archives</a></div>
+            <div><a href="tma/" class="title">Magnus Archives</a></div>
             <div><a href="tma/characters" class="subtitle">Characters</a></div>
             <div><a href="tma/fears" class="subtitle">Dread Powers</a></div>
             <div><a href="tma/episodes" class="subtitle">Episodes</a></div>
               <hr>
-            <div><a href="tmagp/index" class="title">Magnus Protocol</a></div>
+            <div><a href="tmagp/" class="title">Magnus Protocol</a></div>
             <div><a href="tmagp/episodes" class="subtitle">Episodes</a></div>
             <div><a href="tmagp/characters" class="subtitle">Characters</a></div>
           </nav>
