--- a/tmagp/char/oiar.html
+++ b/tmagp/char/oiar.html
@@ -36,9 +36,9 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index" class="title">Home</a></div>
-        <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../" class="title">Home</a></div>
+        <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
@@ -204,9 +204,9 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index" class="title">Home</a></div>
-              <div><a href="../../tma/index" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../" class="title">Home</a></div>
+              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
