--- a/tma/index.html
+++ b/tma/index.html
@@ -36,9 +36,9 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../index" class="title">Home</a></div>
+        <div><a href="../" class="title">Home</a></div>
         <div>Magnus Archives</div>
-        <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
@@ -84,9 +84,9 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../index" class="title">Home</a></div>
+              <div><a href="../" class="title">Home</a></div>
               <div class="subtitle">Magnus Archives</div>
-              <div><a href="../tmagp/index" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
