--- a/tmagp/index.html
+++ b/tmagp/index.html
@@ -36,8 +36,8 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../index" class="title">Home</a></div>
-        <div><a href="../tma/index" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../" class="title">Home</a></div>
+        <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
         <div class="subtitle">Magnus Protocol</div>
       </nav>
     </section>
@@ -77,8 +77,8 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-            <div><a href="../index" class="title">Home</a></div>
-            <div><a href="../tma/index" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../" class="title">Home</a></div>
+            <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
             <div class="subtitle">Magnus Protocol</div>
           </nav>
         </section>
