fix links ... again

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -80,8 +80,8 @@
         <section>
           <nav>
               <div class="title">Home</div>
-              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="tma/" class="subtitle">Magnus Archives</a></div>
+              <div><a href="tmagp/" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
