--- a/tma/characters/index.html
+++ b/tma/characters/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>TMagP: minor characters</title>
+    <title>TMA: characters</title>
     <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
@@ -36,17 +36,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../" class="title">Home</a></div>
-        <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="/" class="title">Home</a></div>
+        <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
-        <div><a href="tmagp/episodes" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters" class="title">Characters</a></div>
-        <div><a href="tmagp/002" class="subtitle">Next Episode</a></div>
+        <div><a href="../episodes" class="title">Episodes</a></div>
+        <div class="title">Characters</div>
       </nav>
     </section>
   </aside>
@@ -73,17 +72,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../" class="title">Home</a></div>
-              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="/" class="title">Home</a></div>
+            <div><a href="../" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../../tmagp/" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
-              <div><a href="tmagp/episodes" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters" class="title">Characters</a></div>
-              <div><a href="tmagp/002" class="subtitle">Next Episode</a></div>
+            <div><a href="../episodes" class="title">Episodes</a></div>
+            <div class="title">Characters</div>
           </nav>
         </section>
       </aside>
@@ -103,7 +101,7 @@
         <h4></h4>
       </section>
       <section>
-        <div id="Statement">
+        <div id="">
           <h2></h2>
         </div>
       </section>
@@ -118,7 +116,7 @@
       </section>-->
     </article>
   </main>
-
+  
   <script src="../../js/scripts.js"></script>
 </body>
 </html>
