--- a/tma/characters/institute.html
+++ b/tma/characters/institute.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>TMA: characters</title>
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+    <title>the magnus institute employees</title>
+    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="../less/style.less">
+    <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
       <!-- LESS.js: lesscss.org -->
     <script src="https://cdn.jsdelivr.net/npm/less" type="text/javascript"></script>
       <!-- ICONS: phosphoricons.com -->
@@ -36,16 +36,17 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../mortalgarden.github.io/" class="title">Home</a></div>
-        <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../../" class="title">Home</a></div>
+        <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMA</h6>
       <nav>
-        <div><a href="episodes" class="title">Episodes</a></div>
-        <div class="title">Characters</div>
+        <div><a href="../episodes" class="title">Episodes</a></div>
+        <div><a href="../characters" class="title">Characters</a></div>
+        <div><a href="../002" class="subtitle">Next Episode</a></div>
       </nav>
     </section>
   </aside>
@@ -72,16 +73,17 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-            <div><a href="../../mortalgarden.github.io/" class="title">Home</a></div>
-            <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
-            <div><a href="../tmagp/" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../../" class="title">Home</a></div>
+              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMA</h6>
           <nav>
-            <div><a href="episodes" class="title">Episodes</a></div>
-            <div class="title">Characters</div>
+              <div><a href="../episodes" class="title">Episodes</a></div>
+              <div><a href="../characters" class="title">Characters</a></div>
+              <div><a href="../002" class="subtitle">Next Episode</a></div>
           </nav>
         </section>
       </aside>
@@ -116,7 +118,7 @@
       </section>-->
     </article>
   </main>
-  
-  <script src="../js/scripts.js"></script>
+
+  <script src="../../js/scripts.js"></script>
 </body>
 </html>
