--- a/tma/characters/minor.html
+++ b/tma/characters/minor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -46,7 +46,6 @@
       <nav>
         <div><a href="../episodes" class="title">Episodes</a></div>
         <div><a href="../characters" class="title">Characters</a></div>
-        <div><a href="../002" class="subtitle">Next Episode</a></div>
       </nav>
     </section>
   </aside>
