--- a/tmagp/characters/minor.html
+++ b/tmagp/characters/minor.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>the magnus institute employees</title>
+    <title>TMagP: minor characters</title>
     <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
@@ -42,11 +42,10 @@
       </nav>
     </section>
     <section>
-      <h6>TMA</h6>
+      <h6>TMagP</h6>
       <nav>
         <div><a href="../episodes" class="title">Episodes</a></div>
-        <div><a href="../characters" class="title">Characters</a></div>
-        <div><a href="../002" class="subtitle">Next Episode</a></div>
+        <div><a href="." class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -79,11 +78,10 @@
           </nav>
         </section>
         <section>
-          <h6>TMA</h6>
+          <h6>TMagP</h6>
           <nav>
-              <div><a href="../episodes" class="title">Episodes</a></div>
-              <div><a href="../characters" class="title">Characters</a></div>
-              <div><a href="../002" class="subtitle">Next Episode</a></div>
+            <div><a href="../episodes" class="title">Episodes</a></div>
+            <div><a href="." class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -103,7 +101,7 @@
         <h4></h4>
       </section>
       <section>
-        <div id="">
+        <div id="Statement">
           <h2></h2>
         </div>
       </section>
