--- a/tmagp/index.html
+++ b/tmagp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -58,9 +58,9 @@
           <div><a href="season/1" class="subtitle">Season One</a></div>
             <hr>
           <div><a href="characters" class="title">Characters</a></div>
-          <div><a href="char/oiar" class="subtitle">O.I.A.R. Staff</a></div>
-          <div><a href="char/recurring" class="subtitle">Recurring</a></div>
-          <div><a href="char/minor" class="subtitle">Others</a></div>
+          <div><a href="characters/oiar" class="subtitle">O.I.A.R. Staff</a></div>
+          <div><a href="characters/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="characters/minor" class="subtitle">Others</a></div>
         </nav>
       </section>
   </aside>
@@ -98,9 +98,9 @@
             <div><a href="season/1" class="subtitle">Season One</a></div>
               <hr>
             <div><a href="characters" class="title">Characters</a></div>
-            <div><a href="char/oiar" class="subtitle">O.I.A.R. Staff</a></div>
-            <div><a href="char/recurring" class="subtitle">Recurring</a></div>
-            <div><a href="char/minor" class="subtitle">Others</a></div>
+            <div><a href="characters/oiar" class="subtitle">O.I.A.R. Staff</a></div>
+            <div><a href="characters/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="characters/minor" class="subtitle">Others</a></div>
           </nav>
         </section>
       </aside>
