--- a/tma/index.html
+++ b/tma/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -63,9 +63,9 @@
           <div><a href="season/5" class="subtitle">Season Five</a></div>
             <hr>
           <div><a href="characters" class="title">Characters</a></div>
-          <div><a href="char/institute" class="subtitle">Institute Employees</a></div>
-          <div><a href="char/recurring" class="subtitle">Recurring</a></div>
-          <div><a href="char/minor" class="subtitle">Other</a></div>
+          <div><a href="characters/institute" class="subtitle">Institute Employees</a></div>
+          <div><a href="characters/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="characters/minor" class="subtitle">Other</a></div>
             <hr>
           <div><a href="fears" class="title">Entities</a></div>
         </nav>
@@ -110,9 +110,9 @@
             <div><a href="season/5" class="subtitle">Season Five</a></div>
               <hr>
             <div><a href="characters" class="title">Characters</a></div>
-            <div><a href="char/institute" class="subtitle">Institute Employees</a></div>
-            <div><a href="char/recurring" class="subtitle">Recurring</a></div>
-            <div><a href="char/minor" class="subtitle">Other</a></div>
+            <div><a href="characters/institute" class="subtitle">Institute Employees</a></div>
+            <div><a href="characters/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="characters/minor" class="subtitle">Other</a></div>
               <hr>
             <div><a href="fears" class="title">Entities</a></div>
           </nav>
