--- a/tmagp/characters/index.html
+++ b/tmagp/characters/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: hsl(281, 46%, 14%);">
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
     <title>TMagP: characters</title>
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="../less/style.less">
+    <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
       <!-- LESS.js: lesscss.org -->
     <script src="https://cdn.jsdelivr.net/npm/less" type="text/javascript"></script>
       <!-- ICONS: phosphoricons.com -->
@@ -36,15 +36,15 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../" class="title">Home</a></div>
+        <div><a href="../../" class="title">Home</a></div>
         <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
-        <div><a href="" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="episodes" class="title">Episodes</a></div>
+        <div><a href="../episodes" class="title">Episodes</a></div>
         <div class="title">Characters</div>
       </nav>
     </section>
@@ -74,13 +74,13 @@
           <nav>
             <div><a href="../" class="title">Home</a></div>
             <div><a href="../tma/" class="subtitle">Magnus Archives</a></div>
-            <div><a href="" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="episodes" class="title">Episodes</a></div>
+              <div><a href="../episodes" class="title">Episodes</a></div>
               <div class="title">Characters</div>
           </nav>
         </section>
@@ -117,6 +117,6 @@
     </article>
   </main>
 
-  <script src="../js/scripts.js"></script>
+  <script src="../../js/scripts.js"></script>
 </body>
 </html>
