--- a/tma/cast/minor.html
+++ b/tma/cast/minor.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
     <title>TMA: minor characters</title>
-    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+      <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
+    <link rel="stylesheet/less" type="text/css" href="/less/style.less">
       <!-- LESS.js: lesscss.org -->
-    <script src="https://cdn.jsdelivr.net/npm/less" type="text/javascript"></script>
+    <script src="/framework/less.min.js" type="text/javascript"></script>
       <!-- ICONS: phosphoricons.com -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+      <link rel="stylesheet" type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
 </head>
 
 <body>
@@ -36,16 +41,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../" class="title">Home</a></div>
-        <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="/" class="title">Home</a></div>
+        <div><a href="/tma/" class="subtitle">Magnus Archives</a></div>
         <div><a href="../" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
       <h6>TMA</h6>
       <nav>
-        <div><a href="../episodes" class="title">Episodes</a></div>
-        <div><a href="../characters" class="title">Characters</a></div>
+        <div><a href="../season/" class="title">Seasons</a></div>
+        <div><a href="../cast/" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -72,16 +77,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../" class="title">Home</a></div>
-              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+              <div><a href="/" class="title">Home</a></div>
+              <div><a href="/tma/" class="subtitle">Magnus Archives</a></div>
               <div><a href="../" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="../episodes" class="title">Episodes</a></div>
-              <div><a href="../characters" class="title">Characters</a></div>
+              <div><a href="../season/" class="title">Seasons</a></div>
+              <div><a href="../cast/" class="title">Characters</a></div>
               <div><a href="../002" class="subtitle">Next Episode</a></div>
           </nav>
         </section>
@@ -118,6 +123,6 @@
     </article>
   </main>
 
-  <script src="../../js/scripts.js"></script>
+  <script src="/js/global.js"></script>
 </body>
 </html>
