--- a/tmagp/cast/index.html
+++ b/tmagp/cast/index.html
@@ -4,14 +4,19 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <title>TMA: recurring characters</title>
-    <link rel="icon" type="image/x-icon" href="../../img/favicon.ico">
+    <title>TMagP: characters</title>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+      <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="../../less/style.less">
+    <link rel="stylesheet/less" type="text/css" href="/less/style.less">
       <!-- LESS.js: lesscss.org -->
-    <script src="https://cdn.jsdelivr.net/npm/less" type="text/javascript"></script>
+    <script src="/framework/less.min.js" type="text/javascript"></script>
       <!-- ICONS: phosphoricons.com -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+      <link rel="stylesheet" type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
 </head>
 
 <body>
@@ -36,17 +41,16 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../" class="title">Home</a></div>
-        <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
+        <div><a href="/" class="title">Home</a></div>
+        <div><a href="/tma/" class="subtitle">Magnus Archives</a></div>
         <div><a href="../" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
-      <h6>TMA</h6>
+      <h6>TMagP</h6>
       <nav>
-        <div><a href="../episodes" class="title">Episodes</a></div>
-        <div><a href="../characters" class="title">Characters</a></div>
-        <div><a href="../002" class="subtitle">Next Episode</a></div>
+        <div><a href="../season/" class="title">Seasons</a></div>
+        <div class="title">Characters</div>
       </nav>
     </section>
   </aside>
@@ -73,17 +77,16 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../" class="title">Home</a></div>
-              <div><a href="../../tma/" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../" class="subtitle">Magnus Protocol</a></div>
+            <div><a href="../" class="title">Home</a></div>
+            <div><a href="/tma/" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
-          <h6>TMA</h6>
+          <h6>TMagP</h6>
           <nav>
-              <div><a href="../episodes" class="title">Episodes</a></div>
-              <div><a href="../characters" class="title">Characters</a></div>
-              <div><a href="../002" class="subtitle">Next Episode</a></div>
+              <div><a href="../season/" class="title">Seasons</a></div>
+              <div class="title">Characters</div>
           </nav>
         </section>
       </aside>
@@ -103,7 +106,7 @@
         <h4></h4>
       </section>
       <section>
-        <div id="Statement">
+        <div id="">
           <h2></h2>
         </div>
       </section>
@@ -119,6 +122,6 @@
     </article>
   </main>
 
-  <script src="../../js/scripts.js"></script>
+  <script src="/js/global.js"></script>
 </body>
 </html>
