--- a/tmagp/index.html
+++ b/tmagp/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
     <title>the magnus protocol</title>
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../less/style.less">
+      <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
       <!-- LESS.js: lesscss.org -->
-    <script src="https://cdn.jsdelivr.net/npm/less" type="text/javascript"></script>
+    <script src="/framework/less.min.js" type="text/javascript"></script>
       <!-- ICONS: phosphoricons.com -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+      <link rel="stylesheet" type="text/css"
+      href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
 </head>
 
 <body>
@@ -44,8 +49,8 @@
     <section>
       <h6>TMagP</h6>
       <nav>
-        <div><a href="episodes" class="title">Episodes</a></div>
-        <div><a href="characters" class="title">Characters</a></div>
+        <div><a href="season/" class="title">Seasons</a></div>
+        <div><a href="cast/" class="title">Characters</a></div>
       </nav>
     </section>
   </aside>
@@ -54,13 +59,13 @@
     <section>
         <h6>the Magnus Protocol.</h6>
         <nav>
-          <div><a href="episodes" class="title">Episodes</a></div>
+          <div><a href="season/" class="title">Seasons</a></div>
           <div><a href="season/1" class="subtitle">Season One</a></div>
             <hr>
-          <div><a href="characters" class="title">Characters</a></div>
-          <div><a href="characters/oiar" class="subtitle">O.I.A.R. Staff</a></div>
-          <div><a href="characters/recurring" class="subtitle">Recurring</a></div>
-          <div><a href="characters/minor" class="subtitle">Others</a></div>
+          <div><a href="cast/" class="title">Characters</a></div>
+          <div><a href="cast/oiar" class="subtitle">O.I.A.R. Staff</a></div>
+          <div><a href="cast/recurring" class="subtitle">Recurring</a></div>
+          <div><a href="cast/minor" class="subtitle">Others</a></div>
         </nav>
       </section>
   </aside>
@@ -85,8 +90,8 @@
         <section>
           <h6>TMagP</h6>
           <nav>
-              <div><a href="episodes" class="title">Episodes</a></div>
-              <div><a href="characters" class="title">Characters</a></div>
+              <div><a href="season/" class="title">Seasons</a></div>
+              <div><a href="cast/" class="title">Characters</a></div>
           </nav>
         </section>
       </aside>
@@ -94,13 +99,13 @@
         <section>
           <h6>the Magnus Protocol.</h6>
           <nav>
-            <div><a href="episodes" class="title">Episodes</a></div>
+            <div><a href="season/" class="title">Seasons</a></div>
             <div><a href="season/1" class="subtitle">Season One</a></div>
               <hr>
-            <div><a href="characters" class="title">Characters</a></div>
-            <div><a href="characters/oiar" class="subtitle">O.I.A.R. Staff</a></div>
-            <div><a href="characters/recurring" class="subtitle">Recurring</a></div>
-            <div><a href="characters/minor" class="subtitle">Others</a></div>
+            <div><a href="cast/" class="title">Characters</a></div>
+            <div><a href="cast/oiar" class="subtitle">O.I.A.R. Staff</a></div>
+            <div><a href="cast/recurring" class="subtitle">Recurring</a></div>
+            <div><a href="cast/minor" class="subtitle">Others</a></div>
           </nav>
         </section>
       </aside>
@@ -112,7 +117,7 @@
       </section>
       <section>
         <div id="Statement">
-          <h2>introduction</h2>
+          <h2>Introduction</h2>
         </div>
       </section>
       <section class="cluster">
@@ -126,7 +131,7 @@
           </p>
             <br>
           <p class="analysis">
-            while we don't know the status of <a href="../tma/fears">the Entities</a>, i may refer to them in my analyses of the episodes; i will at least point out the presence of their <i>general themes</i> within episodes and, at times, refer to them by name. <b>this is due to change once we learn more about this reality and how the Fears work within it, if at all;</b> nonetheless, unless there's new thematic elements and different Entities, in whatever forms, i will refer back to the ones from Archives.
+            while we don't know the status of <a href="../tma/fears">the Entities</a>, i may refer to them in my analyses of the seasons; i will at least point out the presence of their <i>general themes</i> within seasons and, at times, refer to them by name. <b>this is due to change once we learn more about this reality and how the Fears work within it, if at all;</b> nonetheless, unless there's new thematic elements and different Entities, in whatever forms, i will refer back to the ones from Archives.
           </p>
         </div>
       </section>
