fix script link

--- a/tma/fears.html
+++ b/tma/fears.html
@@ -678,7 +678,7 @@
     </article>
   </main>
 
-  <script src="../js/scripts.js"></script>
+  <script src="/js/global.js"></script>
   <script src="../js/modalFear.js"></script>
 </body>
 </html>
