--- a/tma/index.html
+++ b/tma/index.html
@@ -151,6 +151,6 @@
     </article>
   </main>
 
-  <script src="../js/scripts.js"></script>
+  <script src="/js/global.js"></script>
 </body>
 </html>
